# horizonts-front

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/v1/: auth.py  factory.py  firm.py  items.py  phider.py  report.py  statistic.py  users.py
backend/src/core/: auth.py  report.py
backend/src/database/: backup.sql  backup2409.sql  crud.py  database.py  models.py  new_dump.sql  queries.py  utils.py
backend/src/models/: requests.py  responses.py  user_schema.py
backend/src/utils/: shared_data.py  utils.py
horizonts/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
horizonts/src/: App.jsx  index.css
horizonts/src/components/: CriticalEventCard.jsx  DataCard.jsx  DataDayCard.jsx  EquipmentData.jsx  EquipmentGraphics.jsx  EquipmentModal.jsx  EquipmentStatus.jsx  FactoryButton.jsx  FirmsList.jsx  Graphic.jsx  Header.jsx  HistoryTable.jsx  HistoryTreeSelect.jsx  LeftMenu.jsx  MainGraphic.jsx  ReloadButton.jsx  SettingsAddFirmModal.jsx  UsersPage.jsx
horizonts/src/pages/: History.jsx  Login.jsx  Settings.jsx  Statistic.jsx
nginx/: nginx.conf
scripts/: Dockerfile  generator.py  input.py  main.py  predictor.py  pyproject.toml  shared_data.py  status.py
