[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ifonya22 <senior.afonichev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
cryptography = "^43.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[ruff]
line-length = 88  
select = ["F401", "F403", "F405", "F401"] 
extend-ignore = []  

[ruff.isort]
known_first_party = ["backend"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
separate_groups = true