[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Ilya Afonichev <ilya.afonichev@tmk-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiomysql = "=0.2.0"
asyncio = "=3.4.3"
numpy = "=2.0.1"
scikit-learn = "=1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
